# gamepad-fun

./: .gitmodules  CMakeLists.txt  gamepad.cpp  gamepad.h  main.cpp  synth.cpp  synth.h  uinput.cpp  uinput.h
